# c44-freeimage

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux-ubuntu-latest-32.yml  linux-ubuntu-latest-64.yml
cmake/: SetDefaultBuildType.cmake  SetDefaultGccFlags.cmake
debian/: changelog  control  copyright  rules
packaging/: CMakeLists.txt
src/: c44-fi.cpp  fi_c44.cpp
